UILayout.prop_enum() does not observe "text" parameter override #41156

Closed
opened 2014-07-23 12:07:48 +02:00 by Lih-Hern Pang · 5 comments

System Information
Windows 7
GeForce Go 7300

Blender Version
Broken: 2.71 9337574

When using the api:
UILayout.prop_enum()
The toggle button generated does not observe "text" parameter override

Exact steps for others to reproduce the error
See attached addon test script.

prop_enum_bug_test.zip

**System Information** Windows 7 GeForce Go 7300 **Blender Version** Broken: 2.71 9337574 When using the api: UILayout.prop_enum() The toggle button generated does not observe "text" parameter override **Exact steps for others to reproduce the error** See attached addon test script. [prop_enum_bug_test.zip](https://archive.blender.org/developer/F99218/prop_enum_bug_test.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lf3t-hn4d

Added subscriber: @lf3t-hn4d
Bastien Montagne self-assigned this 2014-07-23 14:33:03 +02:00

This issue was referenced by cf9d5db75b

This issue was referenced by cf9d5db75b4c8599b6669a49c40e40938ac6a34b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cf9d5db75b.

Closed by commit cf9d5db75b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41156
No description provided.